# LifeOfPikarin

./: .gitignore  AGENTS.md  README.md  Terrarium.sln  package.json  pyproject.toml  requirements.txt  setup_windows_env.bat  summary.md
.agent/: PLANS.md  execplan-long-run-performance.md  execplan_neighbor_bias_aggregation.md  execplan_tick_ms.md
.agent/plans/: 2025-12-13-perf_smooth_execplan.md  add-js-tests.md  appearance-genetics.md  appearance-group-bias.md  csharp9_compat_execplan.md  env_fields_overlay_execplan.md  environment_fields_execplan.md  evolution_traits_lineage.md  execplan-population-waves.md  flee-cohesion-alignment.md  full_implementation_execplan.md  group_base_attraction_execplan.md  group_cluster_food_execplan.md  group_clustering_execplan.md  group_cohesion_detach_execplan.md  group_formation_dynamics_execplan.md  group_wide_split_execplan.md  human_execplan.md  (+22 more)
.devin/: wiki.json
artifacts/: baseline.csv  baseline_after.csv  baseline_after2.csv  baseline_after3.csv  baseline_after4.csv  baseline_after5.csv  baseline_after6.csv  density_soften_smoke.csv  edge_smoke.csv  group_split_guard.csv  groups_zero_start.csv  headless_10k.csv  headless_10k_tuned.csv  headless_20000.csv  headless_baseline.csv  headless_group_spacing.csv  headless_neighbor_perf.csv  metrics.csv  metrics_after.csv  metrics_after_heavy.csv  metrics_smoke.csv  metrics_smoke_latest.csv  profile_sim.pstats  profile_sim_after.pstats  wide_split_smoke.csv
docs/: DESIGN.md  DESIGN_PHASE2.md  snapshot.md
scripts/: generate_dummy_assets.py
terrarium/: __init__.py
(+108 files in other folders)
