[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terrarium-sim"
version = "0.1.0"
description = "Python port of the Terrarium simulation with a web viewer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["terrarium"]

[tool.setuptools.package-data]
terrarium = ["static/*"]
